Solves footer overflow

--- a/cursosstyle.css
+++ b/cursosstyle.css
@@ -1,10 +1,8 @@
 /*Contenido central*/
  .container {
-    width: 80%;
     display: grid;
     grid-template: 1fr / 2fr 1fr;
     gap: 3rem;
-    height: 100vh;
     /* align-items: center; */
     margin: 0 auto;
 
